fixed findAllUserSurveys